...
    <string name="edit_user_error">Edycja nie przebiegła pomyślnie!</string>
    <string name="edit_user_success">Edycja przebiegła pomyślnie</string>
    <string name="save_action_error">Błąd zapisu czynnosci.</string>
    <string name="save_action_success">Czynnosc została zapisana.</string>
    <string name="play_timer_error">Błąd odtwarzania timera.</string>
    <string name="activity_save_error">Błąd zapisu aktywnosci.</string>
    <string name="missing_title_field">Nazwa nie została wprowadzona.</string>
    <string name="display_picture_error">Błąd wyswietlania obrazka.</string>
    <string name="activity_delete_error">Błąd usuwania aktywnosci.</string>
</resources>

